--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "body-parser": "^1.20.2",
     "compression": "^1.7.4",
     "connect-redis": "^7.1.1",
+    "dotenv": "^16.4.7",
     "express": "^4.19.2",
     "express-handlebars": "^7.1.2",
     "express-session": "^1.18.0",
